# webserv

./: .clang-format  .gitignore  Makefile  README.md
aux/: skrew_server.c
aux/html/: index.html
aux/skrew/: Makefile  skrew_client.c
config/: minimal.nginx
src/: Request.cpp  Request.hpp  Socket.hpp  getline.cpp  getline.h  main.cpp
src/Config/: Config.hpp
src/IO/: Socket.hpp  getline.cpp  getline.h
src/Option/: Option.cpp  Option.hpp
test/: CMakeLists.txt  fetch_gtest.cmake
test/DummyTest/: CMakeLists.txt  dummy.cpp
test/GetlineTest/: CMakeLists.txt  GetlineTest.cpp  short_lines.txt
test/GetlineTest/infiles/: long_lines.py  long_lines.txt
test/dummy_test/: CMakeLists.txt  dummy.cpp
